@@ -57,12 +57,6 @@
 
         <!--Test-->
         <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-            <version>3.1.8.Final</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>io.smallrye.config</groupId>
             <artifactId>smallrye-config</artifactId>
             <version>2.8.2</version>
@@ -88,6 +82,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-junit5</artifactId>
+            <version>2.0.2.Final</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
@@ -97,6 +97,18 @@
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- For JUnit 5 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <!-- testing is using some level stuff and mainly needed to pass on JDK 17 -->
+                    <argLine>--illegal-access=permit</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
     	</plugins>
